Export models.jl from top-level pkg

--- a/experiments/example.ipynb
+++ b/experiments/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "7a156c97-cb06-4b05-81de-4c57a1173a62",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/NoisyReach.jl`\n"
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/NoisyReach.jl`\n",
+      "\u001b[92m\u001b[1mPrecompiling\u001b[22m\u001b[39m project...\n",
+      "         \u001b[91m  ✗ \u001b[39mNoisyReach\n",
+      "  0 dependencies successfully precompiled in 5 seconds. 216 already precompiled.\n",
+      "  \u001b[91m1\u001b[39m dependency errored.\n",
+      "  For a report of the errors see `julia> err`. To retry use `pkg> precompile`\n",
+      "\u001b[96m\u001b[1m[\u001b[39m\u001b[22m \u001b[96m\u001b[1mInfo:\u001b[39m\u001b[22m Precompiling NoisyReach [caa4e8f2-8139-4784-bc83-fd977aec17f5] (cache misses: include_dependency fsize change (2))\n"
      ]
     }
    ],
@@ -24,16 +30,9 @@
     "\t\n",
     "    push!(LOAD_PATH, \"$(@__DIR__)/../src\")\n",
     "\tusing NoisyReach\n",
+    "    using model\n",
     "end"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f4752c7-e9cb-4bf8-a7d9-4416675b9496",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
