Construct state space model

--- a/experiments/example.ipynb
+++ b/experiments/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 53,
    "id": "7a156c97-cb06-4b05-81de-4c57a1173a62",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Downloads/NoisyReach.jl`\n"
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `c:\\My Project\\NoisyReach.jl`\n"
      ]
     }
    ],
@@ -21,8 +21,9 @@
     "\tPkg.instantiate()\n",
     "\t\n",
     "    push!(LOAD_PATH, \"$(@__DIR__)/../src\")\n",
+    "    using Test\n",
     "\tusing NoisyReach\n",
-    "\n",
+    "    using QuadGK\n",
     "    using ControlSystemsBase\n",
     "    using LinearAlgebra\n",
     "    using ReachabilityAnalysis\n",
@@ -41,9 +42,8 @@
        "0.01"
       ]
      },
-     "execution_count": 18,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -62,9 +62,8 @@
        "0.005"
       ]
      },
-     "execution_count": 19,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -73,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "id": "c4cd3ac4-06f4-48a2-a11f-c1b2ef9a1a54",
    "metadata": {},
    "outputs": [
@@ -95,9 +94,8 @@
        "Continuous-time state-space model"
       ]
      },
-     "execution_count": 20,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -121,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
    "id": "46e5ef64-b995-49ac-84f2-3f56a1d359fc",
    "metadata": {},
    "outputs": [
@@ -130,12 +128,12 @@
       "text/plain": [
        "StateSpace{Discrete{Float64}, Float64}\n",
        "A = \n",
-       "  0.9999501666658346    0.009950000415833335  0.0\n",
-       " -0.009950000415833335  0.9900001662500014    0.005\n",
+       "  0.9999501666658346    0.009950000415833335  0.00013085042285076895\n",
+       " -0.009950000415833335  0.9900001662500014    0.0019833252853413363\n",
        "  0.0                   0.0                   0.0\n",
        "B = \n",
-       " 0.0\n",
-       " 0.005\n",
+       " 0.00012891507192816596\n",
+       " 0.0019734334092130165\n",
        " 1.0\n",
        "C = \n",
        " 1.0  0.0  0.0\n",
@@ -146,16 +144,15 @@
        "Discrete-time state-space model"
       ]
      },
-     "execution_count": 21,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
     "sys_aug_ = let\n",
     "    ϕ = ℯ^(Ts * sys.A)\n",
-    "    Γ₁ = Dc * sys.B\n",
-    "    Γ₀ = (Ts - Dc) * sys.B\n",
+    "    Γ₁ = matrix_integral(A, B, Dc, Ts)\n",
+    "    Γ₀ = matrix_integral(A, B, 0.0, Ts - Dc)\n",
     "    ϕ_aug = [ϕ Γ₁; 0 0 0]\n",
     "    Γ_aug = [Γ₀; I]\n",
     "    C_aug = [sys.C 0]\n",
@@ -165,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "0bd95d15-4514-4e84-ad92-08c218e0248c",
    "metadata": {},
    "outputs": [
@@ -174,11 +171,11 @@
       "text/plain": [
        "StateSpace{Discrete{Float64}, Float64}\n",
        "A = \n",
-       "  0.9999501666658346    0.009950000415833335   4.429629703580247e-5\n",
+       "  0.9999501666658346    0.009950000415833335   4.4296297035802466e-5\n",
        " -0.009950000415833335  0.9900001662500014     0.008844444814074077\n",
        "  0.0                   0.0                   -0.3333333333333333\n",
        "B = \n",
-       " 1.661111138842593e-5\n",
+       " 1.6611111388425926e-5\n",
        " 0.0033166668052777787\n",
        " 1.0\n",
        "C = \n",
@@ -190,9 +187,8 @@
        "Discrete-time state-space model"
       ]
      },
-     "execution_count": 22,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -202,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "11cc56e4-3e3f-43d6-b6ad-1bce0ab4509a",
    "metadata": {},
    "outputs": [
@@ -213,27 +209,152 @@
        " 0.239321  0.418528  -0.167879"
       ]
      },
-     "execution_count": 23,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
     "K = lqr(ControlSystemsBase.Discrete, sys_aug.A, sys_aug.B, I, I)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "3daedec6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix_integral (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function matrix_integral(A::AbstractMatrix, B::AbstractMatrix, a::Float64, b::Float64)\n",
+    "    result, _ = quadgk(s ->  exp(A * s) * B, a, b)\n",
+    "    return result\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "1622ef1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: redefinition of constant Main.errors. This may fail, cause incorrect answers, or produce other errors.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2-element Vector{Int64}:\n",
+       " 0\n",
+       " 0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "sys = benchmarks[:F1]\n",
+    "const period = 0.02\n",
+    "const Dc1 = 0.005\n",
+    "const Dc2 = 0.015\n",
+    "const errors = [0, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "8178ce40",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{Float64}:\n",
+       " 1.00027     0.131983  0.000132794\n",
+       " 0.00400164  1.02982   0.00203177\n",
+       " 0.3962      2.97298   0.00581641"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "sys_aug = let\n",
+    "    ϕ = ℯ^(period * sys.A)\n",
+    "    Γ2 = matrix_integral(A, B, Dc2, period)\n",
+    "    Γ1 = matrix_integral(A, B, Dc1, Dc2)\n",
+    "    Γ3 = matrix_integral(A, B, 0.0, Dc1)\n",
+    "    ϕ_aug = [ϕ Γ3; 0 0 0]\n",
+    "    Γ_aug = [Γ1 Γ2; 0 I]\n",
+    "    C_aug = [sys.C 0]\n",
+    "    D_aug = [sys.D 0]\n",
+    "    ss(ϕ_aug, Γ_aug, C_aug, D_aug, Ts)\n",
+    "end\n",
+    "K = lqr(ControlSystemsBase.Discrete, sys_aug.A, sys_aug.B, I, I)\n",
+    "Φ = sys_aug.A + sys_aug.B * K"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "926daf4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "MethodError",
+     "evalue": "MethodError: no method matching Zonotope(::Vector{Float64}, ::Diagonal{Int64, Vector{Int64}})\n\nClosest candidates are:\n  Zonotope(::VN, !Matched::MN) where {N, VN<:AbstractVector{N}, MN<:AbstractMatrix{N}}\n   @ LazySets C:\\Users\\Tingan Zhu\\.julia\\packages\\LazySets\\qUfTe\\src\\Sets\\Zonotope\\Zonotope.jl:94\n  Zonotope(::VN, !Matched::AbstractVector{VN}) where VN<:(AbstractVector)\n   @ LazySets C:\\Users\\Tingan Zhu\\.julia\\packages\\LazySets\\qUfTe\\src\\Sets\\Zonotope\\Zonotope.jl:106\n",
+     "output_type": "error",
+     "traceback": [
+      "MethodError: no method matching Zonotope(::Vector{Float64}, ::Diagonal{Int64, Vector{Int64}})\n",
+      "\n",
+      "Closest candidates are:\n",
+      "  Zonotope(::VN, !Matched::MN) where {N, VN<:AbstractVector{N}, MN<:AbstractMatrix{N}}\n",
+      "   @ LazySets C:\\Users\\Tingan Zhu\\.julia\\packages\\LazySets\\qUfTe\\src\\Sets\\Zonotope\\Zonotope.jl:94\n",
+      "  Zonotope(::VN, !Matched::AbstractVector{VN}) where VN<:(AbstractVector)\n",
+      "   @ LazySets C:\\Users\\Tingan Zhu\\.julia\\packages\\LazySets\\qUfTe\\src\\Sets\\Zonotope\\Zonotope.jl:106\n",
+      "\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ c:\\My Project\\NoisyReach.jl\\experiments\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X16sZmlsZQ==.jl:1"
+     ]
+    }
+   ],
+   "source": [
+    "E = Zonotope(zeros(Float64, 2), Diagonal(errors))\n",
+    "W = get_error_bound(sys_aug.B, K, E)\n",
+    "x0center = 10.\n",
+    "x0size = 1.\n",
+    "x0 = Zonotope(x0center * ones(2), x0size * I(2))\n",
+    "r = reach(Φ, x0, W, 100)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0-beta1",
+   "display_name": "Julia 1.10.3",
    "language": "julia",
-   "name": "julia-1.11"
+   "name": "julia-1.10"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0"
+   "version": "1.10.3"
   }
  },
  "nbformat": 4,
