--- a/experiments/example.ipynb
+++ b/experiments/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "id": "7a156c97-cb06-4b05-81de-4c57a1173a62",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "e754cf27-eefc-4b21-ac63-5942250272ff",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "c4f21e2f-40cf-487f-a2b1-93debc853125",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "c4cd3ac4-06f4-48a2-a11f-c1b2ef9a1a54",
    "metadata": {},
    "outputs": [
@@ -119,33 +119,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "id": "46e5ef64-b995-49ac-84f2-3f56a1d359fc",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "StateSpace{Discrete{Float64}, Float64}\n",
-       "A = \n",
-       "  0.9999501666658346    0.009950000415833335  0.00013085042285076895\n",
-       " -0.009950000415833335  0.9900001662500014    0.0019833252853413363\n",
-       "  0.0                   0.0                   0.0\n",
-       "B = \n",
-       " 0.00012891507192816596\n",
-       " 0.0019734334092130165\n",
-       " 1.0\n",
-       "C = \n",
-       " 1.0  0.0  0.0\n",
-       "D = \n",
-       " 0.0\n",
-       "\n",
-       "Sample Time: 0.01 (seconds)\n",
-       "Discrete-time state-space model"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "UndefVarError",
+     "evalue": "UndefVarError: `matrix_integral` not defined",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: `matrix_integral` not defined\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ c:\\My Project\\NoisyReach.jl\\experiments\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_W4sZmlsZQ==.jl:3"
+     ]
     }
    ],
    "source": [
@@ -162,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "0bd95d15-4514-4e84-ad92-08c218e0248c",
    "metadata": {},
    "outputs": [
@@ -198,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "11cc56e4-3e3f-43d6-b6ad-1bce0ab4509a",
    "metadata": {},
    "outputs": [
@@ -219,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "id": "3daedec6",
    "metadata": {},
    "outputs": [
@@ -242,17 +230,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "id": "1622ef1c",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: redefinition of constant Main.errors. This may fail, cause incorrect answers, or produce other errors.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -275,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 15,
    "id": "8178ce40",
    "metadata": {},
    "outputs": [
@@ -283,9 +264,9 @@
      "data": {
       "text/plain": [
        "3×3 Matrix{Float64}:\n",
-       " 1.00027     0.131983  0.000132794\n",
-       " 0.00400164  1.02982   0.00203177\n",
-       " 0.3962      2.97298   0.00581641"
+       " 1.0127    0.149407  0.00336739\n",
+       " 0.172671  1.26289   0.122367\n",
+       " 0.307036  0.48328   0.0441294"
       ]
      },
      "metadata": {},
@@ -295,9 +276,9 @@
    "source": [
     "sys_aug = let\n",
     "    ϕ = ℯ^(period * sys.A)\n",
-    "    Γ2 = matrix_integral(A, B, Dc2, period)\n",
-    "    Γ1 = matrix_integral(A, B, Dc1, Dc2)\n",
-    "    Γ3 = matrix_integral(A, B, 0.0, Dc1)\n",
+    "    Γ2 = matrix_integral(sys.A, sys.B, Dc2, period)\n",
+    "    Γ1 = matrix_integral(sys.A, sys.B, Dc1, Dc2)\n",
+    "    Γ3 = matrix_integral(sys.A, sys.B, 0.0, Dc1)\n",
     "    ϕ_aug = [ϕ Γ3; 0 0 0]\n",
     "    Γ_aug = [Γ1 Γ2; 0 I]\n",
     "    C_aug = [sys.C 0]\n",
@@ -310,7 +291,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 27,
+   "id": "e5c26cd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.09956091952339212"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "λ11 = 0.3\n",
+    "λ12 = 0.25\n",
+    "λ21 = 0.1\n",
+    "λ22 = 0.1\n",
+    "K_error = [K[1,:][1]*(1+λ11) K[1,:][2]*(1+λ12) K[1,:][3]; K[2,:][1]*(1+λ21) K[2,:][2]*(1+λ22) K[2,:][3]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "926daf4c",
    "metadata": {},
    "outputs": [
@@ -330,7 +335,7 @@
       "\n",
       "Stacktrace:\n",
       " [1] top-level scope\n",
-      "   @ c:\\My Project\\NoisyReach.jl\\experiments\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X16sZmlsZQ==.jl:1"
+      "   @ c:\\My Project\\NoisyReach.jl\\experiments\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X13sZmlsZQ==.jl:1"
      ]
     }
    ],
