--- a/experiments/example.ipynb
+++ b/experiments/example.ipynb
@@ -10,7 +10,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `c:\\My Project\\NoisyReach.jl`\n"
+      "┌ Warning: /Users/julia/.julia/scratchspaces/a66863c6-20e8-4ff4-8a62-49f30b1f605e/agent-cache/default-honeycrisp-HL2F7YQ3XH.0/build/default-honeycrisp-HL2F7YQ3XH-0/julialang/julia-release-1-dot-10/usr/share/julia/stdlib/v1.10/Profile/src/Profile.jl no longer exists, deleted all methods\n",
+      "└ @ Revise /Users/tingan/.julia/packages/Revise/FaTes/src/packagedef.jl:666\n",
+      "┌ Warning: /Users/julia/.julia/scratchspaces/a66863c6-20e8-4ff4-8a62-49f30b1f605e/agent-cache/default-honeycrisp-HL2F7YQ3XH.0/build/default-honeycrisp-HL2F7YQ3XH-0/julialang/julia-release-1-dot-10/usr/share/julia/stdlib/v1.10/Profile/src/Allocs.jl no longer exists, deleted all methods\n",
+      "└ @ Revise /Users/tingan/.julia/packages/Revise/FaTes/src/packagedef.jl:666\n",
+      "┌ Warning: /Users/julia/.julia/scratchspaces/a66863c6-20e8-4ff4-8a62-49f30b1f605e/agent-cache/default-honeycrisp-HL2F7YQ3XH.0/build/default-honeycrisp-HL2F7YQ3XH-0/julialang/julia-release-1-dot-10/usr/share/julia/stdlib/v1.10/Profile/src/precompile.jl no longer exists, deleted all methods\n",
+      "└ @ Revise /Users/tingan/.julia/packages/Revise/FaTes/src/packagedef.jl:666\n",
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/NoisyReach.jl`\n"
      ]
     }
    ],
@@ -73,6 +79,29 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "a8c2faab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix_integral (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "function matrix_integral(A::AbstractMatrix, B::AbstractMatrix, a::Float64, b::Float64)\n",
+    "    result, _ = quadgk(s ->  exp(A * s) * B, a, b)\n",
+    "    return result\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "c4cd3ac4-06f4-48a2-a11f-c1b2ef9a1a54",
    "metadata": {},
    "outputs": [
@@ -119,28 +148,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "46e5ef64-b995-49ac-84f2-3f56a1d359fc",
    "metadata": {},
    "outputs": [
     {
      "ename": "UndefVarError",
-     "evalue": "UndefVarError: `matrix_integral` not defined",
+     "evalue": "UndefVarError: `A` not defined",
      "output_type": "error",
      "traceback": [
-      "UndefVarError: `matrix_integral` not defined\n",
+      "UndefVarError: `A` not defined\n",
       "\n",
       "Stacktrace:\n",
       " [1] top-level scope\n",
-      "   @ c:\\My Project\\NoisyReach.jl\\experiments\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_W4sZmlsZQ==.jl:3"
+      "   @ ~/NoisyReach.jl/experiments/example.ipynb:3"
      ]
     }
    ],
    "source": [
     "sys_aug_ = let\n",
     "    ϕ = ℯ^(Ts * sys.A)\n",
-    "    Γ₁ = matrix_integral(A, B, Dc, Ts)\n",
-    "    Γ₀ = matrix_integral(A, B, 0.0, Ts - Dc)\n",
+    "    Γ₁ = matrix_integral(sys.A, sys.B, Dc, Ts)\n",
+    "    Γ₀ = matrix_integral(sys.A, sys.B, 0.0, Ts - Dc)\n",
     "    ϕ_aug = [ϕ Γ₁; 0 0 0]\n",
     "    Γ_aug = [Γ₀; I]\n",
     "    C_aug = [sys.C 0]\n",
@@ -203,29 +232,6 @@
    ],
    "source": [
     "K = lqr(ControlSystemsBase.Discrete, sys_aug.A, sys_aug.B, I, I)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "3daedec6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "matrix_integral (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "function matrix_integral(A::AbstractMatrix, B::AbstractMatrix, a::Float64, b::Float64)\n",
-    "    result, _ = quadgk(s ->  exp(A * s) * B, a, b)\n",
-    "    return result\n",
-    "end"
    ]
   },
   {
