--- a/experiments/example.ipynb
+++ b/experiments/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 74,
    "id": "7a156c97-cb06-4b05-81de-4c57a1173a62",
    "metadata": {},
    "outputs": [
@@ -10,13 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "┌ Warning: /Users/julia/.julia/scratchspaces/a66863c6-20e8-4ff4-8a62-49f30b1f605e/agent-cache/default-honeycrisp-HL2F7YQ3XH.0/build/default-honeycrisp-HL2F7YQ3XH-0/julialang/julia-release-1-dot-10/usr/share/julia/stdlib/v1.10/Profile/src/Profile.jl no longer exists, deleted all methods\n",
-      "└ @ Revise /Users/tingan/.julia/packages/Revise/FaTes/src/packagedef.jl:666\n",
-      "┌ Warning: /Users/julia/.julia/scratchspaces/a66863c6-20e8-4ff4-8a62-49f30b1f605e/agent-cache/default-honeycrisp-HL2F7YQ3XH.0/build/default-honeycrisp-HL2F7YQ3XH-0/julialang/julia-release-1-dot-10/usr/share/julia/stdlib/v1.10/Profile/src/Allocs.jl no longer exists, deleted all methods\n",
-      "└ @ Revise /Users/tingan/.julia/packages/Revise/FaTes/src/packagedef.jl:666\n",
-      "┌ Warning: /Users/julia/.julia/scratchspaces/a66863c6-20e8-4ff4-8a62-49f30b1f605e/agent-cache/default-honeycrisp-HL2F7YQ3XH.0/build/default-honeycrisp-HL2F7YQ3XH-0/julialang/julia-release-1-dot-10/usr/share/julia/stdlib/v1.10/Profile/src/precompile.jl no longer exists, deleted all methods\n",
-      "└ @ Revise /Users/tingan/.julia/packages/Revise/FaTes/src/packagedef.jl:666\n",
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/NoisyReach.jl`\n"
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Downloads/sc/NoisyReach.jl`\n"
      ]
     }
    ],
@@ -27,8 +21,8 @@
     "\tPkg.instantiate()\n",
     "\t\n",
     "    push!(LOAD_PATH, \"$(@__DIR__)/../src\")\n",
-    "    using Test\n",
-    "\tusing NoisyReach\n",
+    "    \n",
+    "    using NoisyReach\n",
     "    using QuadGK\n",
     "    using ControlSystemsBase\n",
     "    using LinearAlgebra\n",
@@ -38,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 75,
    "id": "e754cf27-eefc-4b21-ac63-5942250272ff",
    "metadata": {},
    "outputs": [
@@ -48,8 +42,9 @@
        "0.01"
       ]
      },
+     "execution_count": 75,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -58,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 76,
    "id": "c4f21e2f-40cf-487f-a2b1-93debc853125",
    "metadata": {},
    "outputs": [
@@ -68,8 +63,9 @@
        "0.005"
       ]
      },
+     "execution_count": 76,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -78,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 77,
    "id": "a8c2faab",
    "metadata": {},
    "outputs": [
@@ -88,20 +84,22 @@
        "matrix_integral (generic function with 1 method)"
       ]
      },
+     "execution_count": 77,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "function matrix_integral(A::AbstractMatrix, B::AbstractMatrix, a::Float64, b::Float64)\n",
-    "    result, _ = quadgk(s ->  exp(A * s) * B, a, b)\n",
+    "function matrix_integral(A::AbstractMatrix, B::AbstractMatrix, lower_limit::Float64, upper_limit::Float64)\n",
+    "    integrand = s -> exp(A * s) * B\n",
+    "    result, _ = quadgk(integrand, lower_limit, upper_limit)\n",
     "    return result\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 78,
    "id": "c4cd3ac4-06f4-48a2-a11f-c1b2ef9a1a54",
    "metadata": {},
    "outputs": [
@@ -123,8 +121,9 @@
        "Continuous-time state-space model"
       ]
      },
+     "execution_count": 78,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -148,21 +147,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 79,
    "id": "46e5ef64-b995-49ac-84f2-3f56a1d359fc",
    "metadata": {},
    "outputs": [
     {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: `A` not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: `A` not defined\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ ~/NoisyReach.jl/experiments/example.ipynb:3"
-     ]
+     "data": {
+      "text/plain": [
+       "StateSpace{Discrete{Float64}, Float64}\n",
+       "A = \n",
+       "  0.9999501666658346    0.009950000415833335  3.735416747259115e-5\n",
+       " -0.009950000415833335  0.9900001662500014    0.00496250038981771\n",
+       "  0.0                   0.0                   0.0\n",
+       "B = \n",
+       " 1.2479166692686635e-5\n",
+       " 0.004987500026015625\n",
+       " 1.0\n",
+       "C = \n",
+       " 1.0  0.0  0.0\n",
+       "D = \n",
+       " 0.0\n",
+       "\n",
+       "Sample Time: 0.01 (seconds)\n",
+       "Discrete-time state-space model"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -179,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 80,
    "id": "0bd95d15-4514-4e84-ad92-08c218e0248c",
    "metadata": {},
    "outputs": [
@@ -188,11 +200,11 @@
       "text/plain": [
        "StateSpace{Discrete{Float64}, Float64}\n",
        "A = \n",
-       "  0.9999501666658346    0.009950000415833335   4.4296297035802466e-5\n",
+       "  0.9999501666658346    0.009950000415833335   4.429629703580247e-5\n",
        " -0.009950000415833335  0.9900001662500014     0.008844444814074077\n",
        "  0.0                   0.0                   -0.3333333333333333\n",
        "B = \n",
-       " 1.6611111388425926e-5\n",
+       " 1.661111138842593e-5\n",
        " 0.0033166668052777787\n",
        " 1.0\n",
        "C = \n",
@@ -204,8 +216,9 @@
        "Discrete-time state-space model"
       ]
      },
+     "execution_count": 80,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -215,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 81,
    "id": "11cc56e4-3e3f-43d6-b6ad-1bce0ab4509a",
    "metadata": {},
    "outputs": [
@@ -226,8 +239,9 @@
        " 0.239321  0.418528  -0.167879"
       ]
      },
+     "execution_count": 81,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -236,10 +250,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 82,
    "id": "1622ef1c",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: redefinition of constant Main.errors. This may fail, cause incorrect answers, or produce other errors.\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -248,8 +269,9 @@
        " 0"
       ]
      },
+     "execution_count": 82,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -262,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 83,
    "id": "8178ce40",
    "metadata": {},
    "outputs": [
@@ -275,8 +297,9 @@
        " 0.307036  0.48328   0.0441294"
       ]
      },
+     "execution_count": 83,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -297,18 +320,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 84,
    "id": "e5c26cd9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.09956091952339212"
+       "2×3 Matrix{Float64}:\n",
+       " 0.940746  1.36732   0.0995609\n",
+       " 0.337739  0.531608  0.0441294"
       ]
      },
+     "execution_count": 84,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -321,27 +347,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 85,
    "id": "926daf4c",
    "metadata": {},
    "outputs": [
     {
-     "ename": "MethodError",
-     "evalue": "MethodError: no method matching Zonotope(::Vector{Float64}, ::Diagonal{Int64, Vector{Int64}})\n\nClosest candidates are:\n  Zonotope(::VN, !Matched::MN) where {N, VN<:AbstractVector{N}, MN<:AbstractMatrix{N}}\n   @ LazySets C:\\Users\\Tingan Zhu\\.julia\\packages\\LazySets\\qUfTe\\src\\Sets\\Zonotope\\Zonotope.jl:94\n  Zonotope(::VN, !Matched::AbstractVector{VN}) where VN<:(AbstractVector)\n   @ LazySets C:\\Users\\Tingan Zhu\\.julia\\packages\\LazySets\\qUfTe\\src\\Sets\\Zonotope\\Zonotope.jl:106\n",
+     "ename": "LoadError",
+     "evalue": "MethodError: no method matching Zonotope(::Vector{Float64}, ::Diagonal{Int64, Vector{Int64}})\nThe type `Zonotope` exists, but no method is defined for this combination of argument types when trying to construct it.\n\n\u001b[0mClosest candidates are:\n\u001b[0m  Zonotope(::VN, \u001b[91m::MN\u001b[39m) where {N, VN<:AbstractVector{N}, MN<:AbstractMatrix{N}}\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[36mLazySets\u001b[39m \u001b[90m~/.julia/packages/LazySets/qUfTe/src/Sets/Zonotope/\u001b[39m\u001b[90m\u001b[4mZonotope.jl:94\u001b[24m\u001b[39m\n\u001b[0m  Zonotope(::VN, \u001b[91m::AbstractVector{VN}\u001b[39m) where VN<:(AbstractVector)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[36mLazySets\u001b[39m \u001b[90m~/.julia/packages/LazySets/qUfTe/src/Sets/Zonotope/\u001b[39m\u001b[90m\u001b[4mZonotope.jl:106\u001b[24m\u001b[39m\n",
      "output_type": "error",
      "traceback": [
-      "MethodError: no method matching Zonotope(::Vector{Float64}, ::Diagonal{Int64, Vector{Int64}})\n",
-      "\n",
-      "Closest candidates are:\n",
-      "  Zonotope(::VN, !Matched::MN) where {N, VN<:AbstractVector{N}, MN<:AbstractMatrix{N}}\n",
-      "   @ LazySets C:\\Users\\Tingan Zhu\\.julia\\packages\\LazySets\\qUfTe\\src\\Sets\\Zonotope\\Zonotope.jl:94\n",
-      "  Zonotope(::VN, !Matched::AbstractVector{VN}) where VN<:(AbstractVector)\n",
-      "   @ LazySets C:\\Users\\Tingan Zhu\\.julia\\packages\\LazySets\\qUfTe\\src\\Sets\\Zonotope\\Zonotope.jl:106\n",
-      "\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ c:\\My Project\\NoisyReach.jl\\experiments\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X13sZmlsZQ==.jl:1"
+      "MethodError: no method matching Zonotope(::Vector{Float64}, ::Diagonal{Int64, Vector{Int64}})\nThe type `Zonotope` exists, but no method is defined for this combination of argument types when trying to construct it.\n\n\u001b[0mClosest candidates are:\n\u001b[0m  Zonotope(::VN, \u001b[91m::MN\u001b[39m) where {N, VN<:AbstractVector{N}, MN<:AbstractMatrix{N}}\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[36mLazySets\u001b[39m \u001b[90m~/.julia/packages/LazySets/qUfTe/src/Sets/Zonotope/\u001b[39m\u001b[90m\u001b[4mZonotope.jl:94\u001b[24m\u001b[39m\n\u001b[0m  Zonotope(::VN, \u001b[91m::AbstractVector{VN}\u001b[39m) where VN<:(AbstractVector)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[36mLazySets\u001b[39m \u001b[90m~/.julia/packages/LazySets/qUfTe/src/Sets/Zonotope/\u001b[39m\u001b[90m\u001b[4mZonotope.jl:106\u001b[24m\u001b[39m\n",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope",
+      "   @ In[85]:1"
      ]
     }
    ],
@@ -357,15 +376,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.10.3",
+   "display_name": "Julia 1.11.0-beta1",
    "language": "julia",
-   "name": "julia-1.10"
+   "name": "julia-1.11"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.10.3"
+   "version": "1.11.0"
   }
  },
  "nbformat": 4,
