--- a/experiments/example.ipynb
+++ b/experiments/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 1,
    "id": "7a156c97-cb06-4b05-81de-4c57a1173a62",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Downloads/sc/NoisyReach.jl`\n"
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `c:\\My Project\\NoisyReach.jl`\n"
      ]
     }
    ],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "id": "e754cf27-eefc-4b21-ac63-5942250272ff",
    "metadata": {},
    "outputs": [
@@ -42,9 +42,8 @@
        "0.01"
       ]
      },
-     "execution_count": 75,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -53,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 3,
    "id": "c4f21e2f-40cf-487f-a2b1-93debc853125",
    "metadata": {},
    "outputs": [
@@ -63,9 +62,8 @@
        "0.005"
       ]
      },
-     "execution_count": 76,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -74,56 +72,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 36,
    "id": "a8c2faab",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "matrix_integral (generic function with 1 method)"
+       "matrix_integral (generic function with 3 methods)"
       ]
      },
-     "execution_count": 77,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "function matrix_integral(A::AbstractMatrix, B::AbstractMatrix, lower_limit::Float64, upper_limit::Float64)\n",
-    "    integrand = s -> exp(A * s) * B\n",
-    "    result, _ = quadgk(integrand, lower_limit, upper_limit)\n",
-    "    return result\n",
+    "function matrix_integral(A::AbstractMatrix{Float64}, B::AbstractMatrix{Float64}, a::Float64, b::Float64)\n",
+    "    integrand(s) = exp(A * s)\n",
+    "    result = zeros(eltype(A), size(A))\n",
+    "    for i in 1:size(A, 1)\n",
+    "        for j in 1:size(A, 2)\n",
+    "            result[i, j] = quadgk(s -> integrand(s)[i, j], a, b)[1]\n",
+    "        end\n",
+    "    end \n",
+    "    return result * B\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 37,
    "id": "c4cd3ac4-06f4-48a2-a11f-c1b2ef9a1a54",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "StateSpace{Continuous, Int64}\n",
+       "StateSpace{Continuous, Float64}\n",
        "A = \n",
-       "  0   1\n",
-       " -1  -1\n",
+       "  0.0   1.0\n",
+       " -1.0  -1.0\n",
        "B = \n",
-       " 0\n",
-       " 1\n",
+       " 0.0\n",
+       " 1.0\n",
        "C = \n",
-       " 1  0\n",
+       " 1.0  0.0\n",
        "D = \n",
-       " 0\n",
+       " 0.0\n",
        "\n",
        "Continuous-time state-space model"
       ]
      },
-     "execution_count": 78,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -137,17 +138,17 @@
     "# Γ_aug = [0 0.0005 1]\n",
     "# C_aug = [1 0 0]\n",
     "sys = let\n",
-    "    A = [0 1; -1 -1]\n",
-    "    B = [0; 1]\n",
-    "    C = [1 0]\n",
-    "    D = 0\n",
+    "    A = [0.0 1.0; -1.0 -1.0]\n",
+    "    B = [0.0; 1.0]\n",
+    "    C = [1.0 0.0]\n",
+    "    D = 0.0\n",
     "    ss(A, B, C, D)\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 38,
    "id": "46e5ef64-b995-49ac-84f2-3f56a1d359fc",
    "metadata": {},
    "outputs": [
@@ -172,9 +173,8 @@
        "Discrete-time state-space model"
       ]
      },
-     "execution_count": 79,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 39,
    "id": "0bd95d15-4514-4e84-ad92-08c218e0248c",
    "metadata": {},
    "outputs": [
@@ -200,11 +200,11 @@
       "text/plain": [
        "StateSpace{Discrete{Float64}, Float64}\n",
        "A = \n",
-       "  0.9999501666658346    0.009950000415833335   4.429629703580247e-5\n",
+       "  0.9999501666658346    0.009950000415833335   4.4296297035802466e-5\n",
        " -0.009950000415833335  0.9900001662500014     0.008844444814074077\n",
        "  0.0                   0.0                   -0.3333333333333333\n",
        "B = \n",
-       " 1.661111138842593e-5\n",
+       " 1.6611111388425926e-5\n",
        " 0.0033166668052777787\n",
        " 1.0\n",
        "C = \n",
@@ -216,9 +216,8 @@
        "Discrete-time state-space model"
       ]
      },
-     "execution_count": 80,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -228,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 40,
    "id": "11cc56e4-3e3f-43d6-b6ad-1bce0ab4509a",
    "metadata": {},
    "outputs": [
@@ -239,9 +238,8 @@
        " 0.239321  0.418528  -0.167879"
       ]
      },
-     "execution_count": 81,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -250,17 +248,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 34,
    "id": "1622ef1c",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: redefinition of constant Main.errors. This may fail, cause incorrect answers, or produce other errors.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -269,9 +260,15 @@
        " 0"
       ]
      },
-     "execution_count": 82,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: redefinition of constant Main.errors. This may fail, cause incorrect answers, or produce other errors.\n"
+     ]
     }
    ],
    "source": [
@@ -284,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 35,
    "id": "8178ce40",
    "metadata": {},
    "outputs": [
@@ -297,9 +294,8 @@
        " 0.307036  0.48328   0.0441294"
       ]
      },
-     "execution_count": 83,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -320,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 11,
    "id": "e5c26cd9",
    "metadata": {},
    "outputs": [
@@ -332,9 +328,8 @@
        " 0.337739  0.531608  0.0441294"
       ]
      },
-     "execution_count": 84,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -347,20 +342,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 12,
    "id": "926daf4c",
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "MethodError: no method matching Zonotope(::Vector{Float64}, ::Diagonal{Int64, Vector{Int64}})\nThe type `Zonotope` exists, but no method is defined for this combination of argument types when trying to construct it.\n\n\u001b[0mClosest candidates are:\n\u001b[0m  Zonotope(::VN, \u001b[91m::MN\u001b[39m) where {N, VN<:AbstractVector{N}, MN<:AbstractMatrix{N}}\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[36mLazySets\u001b[39m \u001b[90m~/.julia/packages/LazySets/qUfTe/src/Sets/Zonotope/\u001b[39m\u001b[90m\u001b[4mZonotope.jl:94\u001b[24m\u001b[39m\n\u001b[0m  Zonotope(::VN, \u001b[91m::AbstractVector{VN}\u001b[39m) where VN<:(AbstractVector)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[36mLazySets\u001b[39m \u001b[90m~/.julia/packages/LazySets/qUfTe/src/Sets/Zonotope/\u001b[39m\u001b[90m\u001b[4mZonotope.jl:106\u001b[24m\u001b[39m\n",
+     "ename": "MethodError",
+     "evalue": "MethodError: no method matching Zonotope(::Vector{Float64}, ::Diagonal{Int64, Vector{Int64}})\n\nClosest candidates are:\n  Zonotope(::VN, !Matched::MN) where {N, VN<:AbstractVector{N}, MN<:AbstractMatrix{N}}\n   @ LazySets C:\\Users\\Tingan Zhu\\.julia\\packages\\LazySets\\qUfTe\\src\\Sets\\Zonotope\\Zonotope.jl:94\n  Zonotope(::VN, !Matched::AbstractVector{VN}) where VN<:(AbstractVector)\n   @ LazySets C:\\Users\\Tingan Zhu\\.julia\\packages\\LazySets\\qUfTe\\src\\Sets\\Zonotope\\Zonotope.jl:106\n",
      "output_type": "error",
      "traceback": [
-      "MethodError: no method matching Zonotope(::Vector{Float64}, ::Diagonal{Int64, Vector{Int64}})\nThe type `Zonotope` exists, but no method is defined for this combination of argument types when trying to construct it.\n\n\u001b[0mClosest candidates are:\n\u001b[0m  Zonotope(::VN, \u001b[91m::MN\u001b[39m) where {N, VN<:AbstractVector{N}, MN<:AbstractMatrix{N}}\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[36mLazySets\u001b[39m \u001b[90m~/.julia/packages/LazySets/qUfTe/src/Sets/Zonotope/\u001b[39m\u001b[90m\u001b[4mZonotope.jl:94\u001b[24m\u001b[39m\n\u001b[0m  Zonotope(::VN, \u001b[91m::AbstractVector{VN}\u001b[39m) where VN<:(AbstractVector)\n\u001b[0m\u001b[90m   @\u001b[39m \u001b[36mLazySets\u001b[39m \u001b[90m~/.julia/packages/LazySets/qUfTe/src/Sets/Zonotope/\u001b[39m\u001b[90m\u001b[4mZonotope.jl:106\u001b[24m\u001b[39m\n",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope",
-      "   @ In[85]:1"
+      "MethodError: no method matching Zonotope(::Vector{Float64}, ::Diagonal{Int64, Vector{Int64}})\n",
+      "\n",
+      "Closest candidates are:\n",
+      "  Zonotope(::VN, !Matched::MN) where {N, VN<:AbstractVector{N}, MN<:AbstractMatrix{N}}\n",
+      "   @ LazySets C:\\Users\\Tingan Zhu\\.julia\\packages\\LazySets\\qUfTe\\src\\Sets\\Zonotope\\Zonotope.jl:94\n",
+      "  Zonotope(::VN, !Matched::AbstractVector{VN}) where VN<:(AbstractVector)\n",
+      "   @ LazySets C:\\Users\\Tingan Zhu\\.julia\\packages\\LazySets\\qUfTe\\src\\Sets\\Zonotope\\Zonotope.jl:106\n",
+      "\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ c:\\My Project\\NoisyReach.jl\\experiments\\jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X14sZmlsZQ==.jl:1"
      ]
     }
    ],
@@ -376,15 +378,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0-beta1",
+   "display_name": "Julia 1.10.3",
    "language": "julia",
-   "name": "julia-1.11"
+   "name": "julia-1.10"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0"
+   "version": "1.10.3"
   }
  },
  "nbformat": 4,
